优化代码和添加新的类库

--- a/BaseLibrary/src/main/res/layout/layout_title_bar.xml
+++ b/BaseLibrary/src/main/res/layout/layout_title_bar.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/mRelativeLayout"
+    android:id="@+id/titleLayout"
     android:layout_width="match_parent"
     android:layout_height="@dimen/title_bar_height">
 
     <TextView
-        android:id="@+id/mTvTitle"
+        android:id="@+id/tvTitle"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginEnd="@dimen/title_bar_height"
@@ -14,24 +14,23 @@
         android:ellipsize="end"
         android:gravity="center"
         android:maxLines="1"
-        android:textSize="@dimen/title_bar_text_size"
         android:visibility="visible"/>
 
 
     <LinearLayout
-        android:id="@+id/mLeftLayout"
+        android:id="@+id/leftLayout"
         android:layout_width="wrap_content"
         android:layout_height="match_parent">
 
         <ImageView
-            android:id="@+id/mIvLeft"
+            android:id="@+id/ivLeft"
             android:layout_width="@dimen/title_bar_height"
             android:layout_height="@dimen/title_bar_height"
             android:padding="@dimen/title_bar_padding"
             android:visibility="visible"/>
 
         <TextView
-            android:id="@+id/mTvLeft"
+            android:id="@+id/tvLeft"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
@@ -41,21 +40,21 @@
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/mRightLayout"
+        android:id="@+id/rightLayout"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_alignParentEnd="true"
         android:orientation="horizontal">
 
         <ImageView
-            android:id="@+id/mIvRight"
+            android:id="@+id/ivRight"
             android:layout_width="@dimen/title_bar_height"
             android:layout_height="@dimen/title_bar_height"
             android:padding="@dimen/title_bar_padding"
             android:visibility="gone"/>
 
         <TextView
-            android:id="@+id/mTvRight"
+            android:id="@+id/tvRight"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
@@ -65,7 +64,7 @@
     </LinearLayout>
 
     <View
-        android:id="@+id/line"
+        android:id="@+id/dividerLine"
         android:layout_width="match_parent"
         android:layout_height="@dimen/divider_line"
         android:layout_alignParentBottom="true"
